--- a/css/css.css
+++ b/css/css.css
@@ -42,8 +42,13 @@ table {
     border-spacing: 0;
 }
 /* reset End */
-
-.carousel-item {
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%; /* 設置寬度為100%，使其填滿整個視窗 */
+  z-index: 1000; /* 設置 z-index，確保其在其他元素上方 */
+}
+.carousel-item,.carousel-inner {
     max-height: 900px;
   }
   
@@ -53,14 +58,20 @@ table {
     height: 100%;
     object-fit: cover;
   }
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    .carousel-item {
-      height: 500px;
+  /* @media screen and (min-width: 768px) and (max-width: 1024px) {
+    .carousel-item,.carousel-inner{
+      max-height: 500px;
     }
-  }
+    .carousel-item img{
+      height: 100%;
+    }
+  } */
   @media screen and (max-width: 768px) {
-    .carousel-item {
-      height: 300px;
+    .carousel-item,.carousel-inner {
+      height: 600px;
+    }
+    .carousel-item img{
+      height: 100%;
     }
   }
   h2{
@@ -152,7 +163,7 @@ hr{
   }
 }
 h1{
-  font-size: 2.5vw;
+  font-size: 3vw;
   color: rgba(191, 203, 206);
   text-align: center;
 }
@@ -168,26 +179,58 @@ h1{
 }
 #card{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  margin: 5%;
+  margin: 5% 10% 10% 10%;
 }
 .card{
   overflow: hidden;
   padding: 1%;
   margin: 1%;
+  height:500px;
 }
 .card img{
   height: 300px;
   object-fit: cover;
 }
+.card p{
+  padding-top: 2%;
+  line-height: 1.5vw;
+  padding: 3% 0;
+}
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .card img {
     height: 400px;
   }
+  .card{
+    height:600px;
+  }
+  .card p{
+    padding-top: 2%;
+    font-size: 2.5vw;
+    line-height: 4.5vw;
+  }
 }
 @media screen and (max-width: 767px) {
+  .card{
+    height:300px;
+  }
   .card img {
     height: 200px;
   }
+  .card p{
+    padding-top: 2%;
+    font-size: 2.5vw;
+    line-height: 4.5vw;
+  }
+}
+footer{
+  height:10vh;
+  background-image: url('../img/footer-bg.jpg');
+  opacity:80%;
+  color: #a85151;
+  font-size: 2vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
